week-4/go-rest-api/deploy/deployment.yaml
# API Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-api
  labels:
    app: postgres-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: postgres-api
  template:
    metadata:
      labels:
        app: postgres-api
    spec:
      serviceAccountName: postgres-api
      imagePullSecrets:
        - name: stackit-registry-secret
      containers:
        - name: api
          image: registry.onstackit.cloud/l3-cloud-psql/postgres-api:199e4a5ac663172751ef43afc252d97a3f2fd5aa
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
---
# UI deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-ui
  namespace: postgres-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: postgres-ui
  template:
    metadata:
      labels:
        app: postgres-ui
    spec:
      containers:
        - name: ui
          image: registry.onstackit.cloud/l3-cloud-psql/postgres-api:199e4a5ac663172751ef43afc252d97a3f2fd5aa
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-ui
  namespace: postgres-api
spec:
  selector:
    app: postgres-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
