week-4/go-rest-api/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-api
  labels:
    app: postgres-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: postgres-api
