week-4/go-rest-api/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-api-ingress
  namespace: postgres-api
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cloudstack.stackit.rocks
      secretName: postgres-api-tls
  rules:
    - host: cloudstack.stackit.rocks
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: postgres-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: postgres-ui
                port:
                  number: 80
